combined applications to main application

--- a/MoodTrackr/pom.xml
+++ b/MoodTrackr/pom.xml
@@ -81,7 +81,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.moodtrackr.HelloApplication
+                                com.example.moodtrackr.MainApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
